--- a/css/style7Sekcja3.css
+++ b/css/style7Sekcja3.css
@@ -20,3 +20,21 @@ body{
 .color2{
     background-color: royalblue;
 }
+.color3{
+    background-color: tomato;
+}
+.color4{
+    background-color: royalblue;
+}
+.color5{
+    background-color: tomato;
+}
+.color6{
+    background-color: royalblue;
+}
+.color7{
+    background-color: tomato;
+}
+.color8{
+    background-color: royalblue;
+}
