--- a/css/style7Sekcja3.css
+++ b/css/style7Sekcja3.css
@@ -1,40 +1,30 @@
-body{
-    background-color: #333333;
-    font-family: sans-serif;
-    font-size: 20px;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-.size{
-    margin: 20px auto;
-    width: 50%;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-    border: 3px solid black;
-    border-radius: 25px;
-    text-transform: uppercase;
+
+body {
+  background-color: #333;
+  font-family: sans-serif;
+  font-size: 20px;
 }
-.color1{
-    margin-top: 120px;
-    background-color: tomato;
+
+.square {
+  margin: 50px;
+  width: 200px;
+  height: 200px;
 }
-.color2{
-    background-color: royalblue;
+
+.item {
+  background-color: gold;
 }
-.color3{
-    background-color: tomato;
+
+.item2 {
+  background-color: lime;
 }
-.color4{
-    background-color: royalblue;
+
+.item3 {
+  background-color: tomato;
 }
-.color5{
-    background-color: tomato;
-}
-.color6{
-    background-color: royalblue;
-}
-.color7{
-    background-color: tomato;
-}
-.color8{
-    background-color: royalblue;
-}
+/*# sourceMappingURL=style7Sekcja3.css.map */
